test/files/neg/t4271.check
t4271.scala:9: error: value to is not a member of Int
  3 to 5
    ^
one error found
